# Procurement-AI-

./: .env.production.example  .gitignore  AGENTS.md  README.md  backend.Dockerfile  docker-compose.prod.yml  docker-compose.yml  industry-config.json  industry-config.schema.json  main.py  package-lock.json  pyproject.toml  render.yaml
.antigravity/: agent_memory_harness.json  backlog_and_debt.md
.github/workflows/: ci.yml
core/: anomaly_engine.py  config_parser.py  executive_reporter.py  forecasting_engine.py  ingestion_pipeline.py  llm_memory_bridge.py  reorder_optimizer.py  scenario_simulator.py
infra/: database.py
scripts/: generate_synthetic_data.py  init_db_schemas.py  run_integration_harness.py
web/: frontend.Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/anomalies/: page.tsx
web/src/app/copilot/: page.tsx
web/src/app/demand/: page.tsx
web/src/app/ingestion/: page.tsx
web/src/app/inventory/: page.tsx
web/src/app/recommendations/: page.tsx
web/src/app/reports/: page.tsx
web/src/app/supplier/: page.tsx
web/src/components/: AnalyticsSkeleton.tsx  ComingSoonFallback.tsx  GovernanceBoundaryAlert.tsx  MultiFileDropzone.tsx  Sidebar.tsx  Tooltip.tsx
web/src/lib/: dashboard.ts  gatewayErrors.ts
