[project]
name = "aegisprocure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.0",
    "scikit-learn>=1.9.0",
    "sqlalchemy",
    "asyncpg",
    "litellm",
    "scipy",
    "uvicorn>=0.49.0",
    "kaggle>=2.2.3",
    "pandas>=3.0.3",
    "httpx>=0.28.1",
    "python-multipart>=0.0.32",
    "statsmodels>=0.14.6",
    "prophet>=1.3.0",
]
