[project]
name = "aegisprocure"
version = "0.1.0"
description = "ProcureMind AI Core Decision Engine"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "litellm>=1.30.0",
    "prophet>=1.1.5",
    "scipy>=1.12.0",
    "python-multipart>=0.0.9"
]
